fix: overflow hidden style parent

--- a/src/runtime/scss/editor.scss
+++ b/src/runtime/scss/editor.scss
@@ -24,6 +24,17 @@
         }
     }
 
+    &.--hidden-parent {
+        height: 100%;
+        box-sizing: border-box;
+
+        .de-body {
+            height: 100%;
+            overflow-y: auto;
+            box-sizing: border-box;
+        }
+    }
+
     .de-body {
         display: flex;
         flex-direction: column;
